--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,3 @@
-
-
 /*--------------- NavBar */
 
 .nav-padding-lg {
@@ -11,14 +9,15 @@
     text-align: right;
 }
 
+.nav-btn-align {
+    float: right;
+}
+
 /*--------------- Media Queries */
 
 @media only screen and (min-width: 768px) {
-
-.nav-padding-lg {
-    padding-left: 5px;
-    padding-right: 5px;
+    .nav-padding-lg {
+        padding-left: 5px;
+        padding-right: 5px;
+    }
 }
-
-}
-
