--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,8 +25,6 @@
 .btn-center {
     display: inline-block;
     text-align: center;
-
-
 }
 
 
@@ -44,6 +42,53 @@
     justify-content: center;
     position: relative;
 }
+
+/*--------------- Reasons Callout (2nd large row) */
+
+.container-reasonscallout {
+    height: 95vh;
+    background-color: teal;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+
+/*--------------- Facts Callout (3rd large row) */
+
+.container-factscallout {
+    height: 95vh;
+    background-color: aqua;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+
+/*--------------- Experience Callout (4th large row) */
+
+.container-experiencecallout {
+    height: 95vh;
+    background-color: teal;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+
+
 
 /*--------------- Media Queries */
 
