Add infobox class to cols in Main Container 2 Add margin above infoboxes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,13 @@
     text-align: center;
 }
 
+/*--------------- Content Boxes */
+
+.infobox-light {
+    margin-top: 20px;
+    background-color: lightcyan;
+}
+
 /*--------------- Callouts */
 
 .container-large {
