Simply form to email and button only

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,6 +98,13 @@
     background-color: turquoise;
 }
 
+/*--------------- Old Style callout */
+
+.form-email-wide {
+display:inline-block;
+    width: 50%;
+}
+
 
 /*--------------- Old Style callout */
 
