--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,7 @@
 .nav-btn-align {
     float: right;
 }
+
 /*--------------- Headers */
 
 .page-header {
@@ -20,30 +21,9 @@
 }
 
 
-/*--------------- Buttons */
 
-.btn-center {
-    display: inline-block;
-    text-align: center;
-}
 
-/*--------------- Content Boxes */
 
-.infobox-light {
-    margin-top: 20px;
-    margin-bottom: 20px;
-    background-color: lightcyan;
-}
-
-.box-right {
-    margin-right: 30px;
-    margin-left: 30px;
-}
-
-.box-left {
-    margin-left: 30px;
-    margin-right: 30px;
-}
 
 /*--------------- Containers */
 
@@ -91,19 +71,54 @@
 }
 
 .container-callout-light {
-   background-color: aqua;
+    background-color: aqua;
 }
 
 .container-callout-dark {
     background-color: turquoise;
 }
 
-/*--------------- Old Style callout */
+
+/*--------------- Content Boxes */
+
+.infobox-light {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    background-color: lightcyan;
+}
+
+.box-right {
+    margin-right: 30px;
+    margin-left: 30px;
+}
+
+.box-left {
+    margin-left: 30px;
+    margin-right: 30px;
+}
+
+
+/*--------------- Buttons */
+
+.btn-center {
+    display: inline-block;
+    text-align: center;
+}
+
+.btn-left {
+        display: inline-block;
+    text-align: left;
+}
+
+/*--------------- Forms */
 
 .form-email-wide {
-display:inline-block;
+    display: inline-block;
     width: 50%;
+    text-align: left;
 }
+
+
 
 
 /*--------------- Old Style callout */
@@ -134,15 +149,15 @@ display:inline-block;
 
 @media only screen and (min-width: 992px) {
     .box-right {
-    margin-right: 30px;
-    margin-left: 0px;
-}
+        margin-right: 30px;
+        margin-left: 0px;
+    }
 
-.box-left {
-    margin-left: 30px;
-    margin-right: 0px;
-}
-    
+    .box-left {
+        margin-left: 30px;
+        margin-right: 0px;
+    }
+
 }
 
 /*-- Markup --*/
