--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,6 +97,11 @@
     margin-right: 30px;
 }
 
+/*--------------- Text alignment */
+
+
+/*--------------- Text decoration */
+
 
 /*--------------- Buttons */
 
@@ -107,7 +112,7 @@
 
 .btn-left {
         display: inline-block;
-    text-align: left;
+    text-align: center;     /*-- only display left on md or above--*/
 }
 
 /*--------------- Forms */
@@ -145,6 +150,11 @@
         padding-left: 5px;
         padding-right: 5px;
     }
+    
+    .btn-left {
+    text-align: left;
+}
+    
 }
 
 @media only screen and (min-width: 992px) {
