--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,17 +59,6 @@
     height: 20%;
 }
 
-.container-callout-medium {
-    height: 60vh;
-    /*-webkit-background-size: cover;*/
-    /*-moz-background-size: cover;*/
-    /*-o-background-size: cover;*/
-    /*background-size: cover;*/
-    align-items: center;
-    /*justify-content: center;*/
-    /*position: relative;*/
-}
-
 .container-callout-light {
     background-color: aqua;
 }
@@ -90,18 +79,22 @@
 .box-right {
     margin-right: 30px;
     margin-left: 30px;
+    /* Adjusts to right margin only at size md and above*/
 }
 
 .box-left {
     margin-left: 30px;
     margin-right: 30px;
+    /* Adjusts to left margin only at size md and above*/
+}
+
+.footer-item {
+    display: block;
 }
 
 /*--------------- Text alignment */
 
-
 /*--------------- Text decoration */
-
 
 /*--------------- Buttons */
 
@@ -111,8 +104,9 @@
 }
 
 .btn-left {
-        display: inline-block;
-    text-align: center;     /*-- only display left on md or above--*/
+    display: inline-block;
+    text-align: center;
+    /*-- only display left on md or above--*/
 }
 
 
@@ -127,7 +121,7 @@
 
 .form-email-wide {
     display: inline-block;
-    width: 50%;
+    width: 400px;
     text-align: left;
 }
 
@@ -142,11 +136,15 @@
         padding-left: 5px;
         padding-right: 5px;
     }
-    
+
     .btn-left {
-    text-align: left;
-}
-    
+        text-align: left;
+    }
+
+    .footer-item {
+        display: inline;
+    }
+
 }
 
 @media only screen and (min-width: 992px) {
@@ -159,6 +157,8 @@
         margin-left: 30px;
         margin-right: 0px;
     }
+
+
 
 }
 
