--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,7 +72,7 @@
 }
 
 .footer-item {
-    display: block;
+    display: inline;
 }
 
 /*--------------- Text alignment */
@@ -83,18 +83,16 @@
 
 /*--------------- Social */
 
-.social-buttons {
-    display: block;
-}
+
 
 
 /*--------------- Forms */
 
-.form-email-wide {
-    display: inline-block;
-    width: 70%;
-    text-align: left;
-}
+/*.form-email-wide {*/
+/*    display: inline-block;*/
+/*    width: 70%;*/
+/*    text-align: left;*/
+/*}*/
 
 
 
@@ -110,10 +108,6 @@
 
     .btn-left {
         text-align: left;
-    }
-
-    .footer-item {
-        display: inline;
     }
 
     .form-email-wide {
