--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,6 +42,17 @@
     padding-bottom: 50px;
 }
 
+.container-first-section {
+    padding-top: 50px;
+    padding-bottom: 50px;
+    background: url('../images/dandelion.png') no-repeat bottom right fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+
+
 .container-footer {
     padding-top: 30px;
     padding-bottom: 30px;
