--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,12 +2,13 @@
 
 body {
     color: #d8fce6;
-    
 }
 h1 {
     font-family: 'Raleway', sans-serif;
     font-weight: 100;
 }
+
+
 
 /*--------------- NavBar */
 
@@ -22,6 +23,14 @@ h1 {
 
 .nav-btn-align {
     float: right;
+}
+
+/*.bg-light {*/
+/*    background-color: rgba(216, 252, 320, 0.5);*/
+/*}*/
+
+.navbar-light {
+    background-color: rgba(216, 252, 320, 0.05) !important;
 }
 
 /*--------------- Headers */
@@ -41,19 +50,15 @@ h1 {
 .container-large-top {
     padding-top: 130px;
     padding-bottom: 130px;
-    /*background: url('../images/dandelion.png') no-repeat bottom right fixed;*/
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
     position: relative;
 }
 
-/*Pseudo element for bg opacity code used from https://css-tricks.com/snippets/css/transparent-background-images/*/
-
 .container-large-top::after {
+    /*Pseudo element for bg opacity code used from https://css-tricks.com/snippets/css/transparent-background-images/ */
+    /*Edited the above to add background position, repeat and size.*/
   content: "";
   background: url(../images/dandelion.png);
-  opacity: 0.5;
+  opacity: 0.7;
      background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
