--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,7 +32,7 @@ h1 {
 }
 
 .nav-item {
-    background-color: rgba(216, 252, 320, 0.5) !important;
+    background-color: rgba(112, 135, 129, 0.8) !important;
 }
 
 /*--------------- Headers */
@@ -201,6 +201,10 @@ h1 {
 
 .nav-link {
     text-align: right;
+}
+
+.nav-item {
+    background-color: rgba(216, 252, 320, 0.0) !important;
 }
 
 }
