--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,12 @@ h1 {
     font-weight: 100;
 }
 
-
+.navbar-light .navbar-nav .nav-link {
+    font-family: 'Raleway', sans-serif;
+    font-weight: 300;
+    letter-spacing: 1.5px;
+    color: #fff !important;
+}
 
 /*--------------- NavBar */
 
