--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,11 @@ body {
 }
 h1 {
     font-family: 'Raleway', sans-serif;
+    font-weight: 200;
+}
+
+h2, h3 {
+    font-family: 'Raleway', sans-serif;
     font-weight: 100;
 }
 
@@ -42,7 +47,13 @@ a:hover.navbar-brand {
     float: right;
 }
 
+.navbar-toggler {
+    border-color: #fff !important;
+}
 
+.navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,102,203, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+}
 
 .navbar-light {
     background-color: rgba(216, 252, 320, 0.05) !important;
