--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,7 +52,7 @@ a:hover.navbar-brand {
 }
 
 /*Next block of code taken from https://stackoverflow.com/questions/42586729/bootstrap-4-change-hamburger-toggler-color*/
-.custom-toggler .navbar-toggler-icon { 
+#custom-toggler .navbar-toggler-icon { 
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,102,203, 0.7)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
 
@@ -63,6 +63,7 @@ a:hover.navbar-brand {
 .nav-item {
     background-color: rgba(112, 135, 129, 0.8) !important;
 }
+
 
 /*--------------- Headers */
 
@@ -111,7 +112,10 @@ a:hover.navbar-brand {
     margin-bottom: 10px;
 }
 
-
+.btn--social-icons {
+    color: white;
+    font-size: 3em;
+}
 
 /*--------------- Containers */
 
