--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -162,11 +162,11 @@ a:hover.navbar-brand, a:hover.nav-link {
     position: relative;
 }
 
-.container-large-top::after {
+.container-large-top:after {
     /*Pseudo element for bg opacity code used from https://css-tricks.com/snippets/css/transparent-background-images/ */
     /*Edited the above to add background position, repeat and size.*/
   content: "";
-  background: url(../images/dandelion.png);
+  background: url(../images/dandelion-mobile.png);
   opacity: 0.7;
      background-position: center;
     background-repeat: no-repeat;
@@ -194,6 +194,23 @@ a:hover.navbar-brand, a:hover.nav-link {
     position: relative;
 }
 
+/*.container-first-section:after {*/
+    /*Pseudo element for bg opacity code used from https://css-tricks.com/snippets/css/transparent-background-images/ */
+    /*Edited the above to add background position, repeat and size.*/
+/*  content: "";*/
+/*  background: url('../images/discussion.jpg');*/
+/*  opacity: 0.7;*/
+/*     background-position: center;*/
+/*    background-repeat: no-repeat;*/
+/*    background-size: cover;*/
+/*  top: 0;*/
+/*  left: 0;*/
+/*  bottom: 0;*/
+/*  right: 0;*/
+/*  position: absolute;*/
+/*  z-index: -1;   */
+/*}*/
+
 .container-second-section {
     padding-top: 50px;
     padding-bottom: 50px;
@@ -203,6 +220,8 @@ a:hover.navbar-brand, a:hover.nav-link {
     background-size: cover;
     position: relative;
 }
+
+
 
 .container-third-section {
     padding-top: 50px;
