Add bottom border to active navbar link

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -345,5 +345,12 @@ a:hover.navbar-brand, a:hover.nav-link {
     background-image: none !important;
 }
 
+.nav--active {
+    /*background-color: rgba(216, 252, 320, 0.15) !important;*/
+    border-bottom-style: solid;
+    border-bottom-width: thin;
+    border-bottom-color: rgba(255, 255, 255, 0.4 );
+}
+
 }
 
