--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -178,11 +178,6 @@ a:hover.navbar-brand, a:hover.nav-link {
     position: relative;
 }
 
-.container-large {
-    padding-top: 50px;
-    padding-bottom: 50px;
-}
-
 .container-first-section {
     padding-top: 150px;
     padding-bottom: 150px;
@@ -190,7 +185,6 @@ a:hover.navbar-brand, a:hover.nav-link {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    opacity: 0.7;
     position: relative;
 }
 
@@ -202,7 +196,6 @@ a:hover.navbar-brand, a:hover.nav-link {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    opacity: 0.7;
     position: relative;
 }
 
@@ -215,7 +208,6 @@ a:hover.navbar-brand, a:hover.nav-link {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    opacity: 0.7;
     position: relative;
 }
 
@@ -248,6 +240,18 @@ a:hover.navbar-brand, a:hover.nav-link {
         background-color: #335544;
 }
 
+.container--translucent {
+        background-color: rgba(112,135,129,0.7) ;
+
+}
+
+/*--------------- Content Spacing Controls */
+
+.container--topbottom20 {
+padding-top: 20px;
+padding-bottom: 20px;
+
+}
 
 /*--------------- Content Boxes */
 
