--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -245,6 +245,27 @@ a:hover.navbar-brand, a:hover.nav-link {
 
 }
 
+
+.container--translucentgradientleft {
+        /*background-color: rgba(112,135,129,0.7) ;*/
+    background-image: linear-gradient(to right, rgba(112,135,129,0) 0%, rgba(112,135,129,0) 45%,rgba(112,135,129,0.7) 60%, rgba(112,135,129,0.7) 100%) !important;
+/*border-style: solid;*/
+/*border-width: 1px;*/
+/*border-color: red;*/
+border-radius: 25px;
+    
+}
+
+.container--translucentgradientright {
+        /*background-color: rgba(112,135,129,0.7) ;*/
+    background-image: linear-gradient(to left, rgba(112,135,129,0) 0%, rgba(112,135,129,0) 45%,rgba(112,135,129,0.7) 60%, rgba(112,135,129,0.7) 100%) !important;
+/*border-style: solid;*/
+/*border-width: 1px;*/
+/*border-color: red;*/
+border-radius: 25px;
+    
+}
+
 /*--------------- Content Spacing Controls */
 
 .container--topbottom20 {
