--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,7 @@ a.navbar-brand, .navbar-light, .navbar-nav, .nav-link {
     font-family: 'Raleway', sans-serif;
     font-weight: 300;
     letter-spacing: 1.5px;
-    color: #fff !important;
+    color: #fff !important; /* !important needed to override Bootstrap*/
     text-shadow: 2px 2px 2px #708781; 
 }
 
@@ -38,7 +38,7 @@ a.navbar-brand, a:link.navbar-brand, a:hover.navbar-brand, a:active.navbar-brand
 }
 
 a:hover.navbar-brand, a:hover.nav-link {
-    color: #d8fce6 !important;
+    color: #d8fce6 !important; /* !important needed to override Bootstrap*/
 }
 
 
@@ -170,12 +170,25 @@ a:hover.navbar-brand, a:hover.nav-link {
 .container-large-top {
     padding-top: 130px;
     padding-bottom: 130px;
-    background: url('../images/dandelion-mobile.png') no-repeat bottom right fixed;
-    background-position: center;
+    position: relative;
+}
+
+.container-large-top::after {
+    /*Pseudo element for bg opacity code used from https://css-tricks.com/snippets/css/transparent-background-images/ */
+    /* Added to create translucent background beneath opaque text */
+    /*Edited the above to add background position, repeat and size.*/
+  content: "";
+  background: url(../images/dandelion.png);
+  opacity: 0.7;
+     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    opacity: 0.7;
-    position: relative;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  position: absolute;
+  z-index: -1;   
 }
 
 .container-first-section {
@@ -222,13 +235,6 @@ a:hover.navbar-brand, a:hover.nav-link {
     padding-right: 50px;
 }
 
-/*.container-small {*/
-/*    height: 150px;*/
-/*}*/
-
-/*.row-large {*/
-/*    height: 60%;*/
-/*}*/
 
 
 
