--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@
 /* Text shadows from https://html-css-js.com/css/generator/text-shadow/ */
 
 body {
-    color: #d8fce6;
+    color: #fff;
 }
 h1 {
     font-family: 'Raleway', sans-serif;
@@ -196,8 +196,6 @@ a:hover.navbar-brand, a:hover.nav-link {
 }
 
 .container-first-section {
-    padding-top: 150px;
-    padding-bottom: 150px;
     background: url('../images/discussion.jpg') no-repeat bottom right fixed;
     background-position: center;
     background-repeat: no-repeat;
@@ -282,6 +280,18 @@ border-radius: 25px;
 .container--topbottom20 {
 padding-top: 20px;
 padding-bottom: 20px;
+
+}
+
+.container--topbottom150 {
+padding-top: 150px;
+padding-bottom: 150px;
+
+}
+
+.container--topbottom75 {
+padding-top: 75px;
+padding-bottom: 75px;
 
 }
 
